# Precon

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
app/: Cargo.toml  tauri.conf.json
app/capabilities/: main.json
app/src/: main.rs
frontend/src/: App.vue  main.js
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
