[package]
name = "precon"
version = "0.1.0"
description = "Resize/compress images with previews"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[profile.release]
opt-level = 3
codegen-units = 1   # Compile crates one after another so the compiler can optimize better
lto = true          # Enables link to optimizations
strip = true        # Remove debug symbols

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
image = "0.24.7"
base64 = "0.21.6"
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["rt"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
